[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentos-openlab"
version = "0.1.0"
description = "OpenLab - Agent Operating System for intelligent agent management"
readme = "README.md"
license = {text = "MIT"}
authors = ["Spharx AgentOS Team"]
keywords = ["agent", "ai", "orchestration", "openlab", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Artificial Intelligence",
]

requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.4.0",
    "pyyaml>=6.0.0",
    "redis>=5.0.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "PyGithub>=1.59.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
docgen = [
    "markdown>=3.5.0",
    "mkdocs>=1.5.0",
    "mkdocstrings>=0.23.0",
]
ecommerce = [
    "stripe>=7.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
]
videoedit = [
    "opencv-python>=4.8.0",
    "moviepy>=1.0.3",
    "playwright>=1.40.0",
]
browser = [
    "playwright>=1.40.0",
    "selenium>=4.15.0",
]

[project.scripts]
openlab = "openlab.main:main"
openlab-agent = "openlab.agents.architect.agent:main"
openlab-market = "openlab.markets.agents.installer.cli:main"

[project.urls]
Homepage = "https://github.com/spharx/agentos"
Documentation = "https://spharx.github.io/agentos"
Repository = "https://github.com/spharx/agentos"
Issues = "https://github.com/spharx/agentos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openlab*"]

[tool.setuptools.package-data]
openlab = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["openlab"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
