[package]
name = "agentrt-rs"
version = "0.1.0"
edition = "2021"
description = "AgentRT Rust SDK"
license = "MIT"
homepage = "https://github.com/spharx/agentrt"
repository = "https://github.com/spharx/agentrt"
authors = ["Spharx AgentRT Team"]

[dependencies]
# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking", "stream"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"

# 异步 trait
async-trait = "0.1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID 生成
uuid = { version = "1.0", features = ["v4"] }

# URL 编码
urlencoding = "2.1"

# 随机数
rand = "0.8"

# 单例模式
once_cell = "1.19"

# 流处理
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
pretty_assertions = "1.0"
futures = "0.3"
