[package]
name = "agentrt-tui"
version = "0.1.1"
edition = "2021"
description = "AgentRT TUI - Terminal User Interface for AgentRT intelligent agent runtime"
license = "MIT"
repository = "https://github.com/spharx/agentrt"
authors = ["SPHARX Ltd."]

[[bin]]
name = "agentrt-tui"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# HTTP client for gateway communication
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Channel for async communication
tokio-stream = "0.1"
futures = "0.3"

# Terminal size detection
unicode-width = "0.1"